# testbed-api

./: .dockerignore  .env  .env.local  .env.staging  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: build-and-test.yml  deploy-dev.yml  deploy-staging.yml  deployment.yml
infra/: Pulumi.dev.yaml  Pulumi.yaml  builder.dockerfile  main.py  requirements.txt  sam-template.yml  utils.py
openapi/: index.html  openapi.yml
src/: api.rs  http_server.rs  lambda_service.rs  main.rs  routes.rs
src/api/: routes.rs  testbed_requests.rs  utils.rs
src/api/routes/: application.rs  figure.rs  job.rs  testbed.rs
src/api/routes/productizers/: figure.rs
src/api/routes/testbed/: testbed_request_utils.rs
src/api/routes/testbed/productizers/: figure.rs
src/lib/api_app/: Cargo.toml
src/lib/api_app/src/: api.rs  lib.rs
src/lib/api_app/src/api/: errors.rs  mod.rs  requests.rs  response_types.rs  responses.rs  routes.rs  routing_types.rs  text_utils.rs  utils.rs
src/lib/api_app/src/api/routes/: application.rs  mod.rs  openapi_helpers.rs  testbed.rs
src/lib/api_app/src/api/routes/jmf/: mod.rs  models.rs
src/lib/api_app/src/api/routes/testbed/: mod.rs  productizers.rs  testbed_request_utils.rs  testbed_utils.rs
src/lib/api_app/src/api/routes/testbed/jmf/: models.rs
src/lib/api_app/src/api/routes/testbed/productizers/: figure.rs  job.rs  mod.rs  user.rs
src/lib/api_app/src/api/routes/testbed/productizers/figure/: figure_models.rs  mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/job/: job_input_extenders.rs  job_models.rs  mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/non_listed_company/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/non_listed_company/beneficial_owners/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/non_listed_company/establishment/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/non_listed_company/signatory_rights/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/nsg/: basic_information.rs  mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/nsg/non_listed_company/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/nsg/non_listed_company/beneficial_owners/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/nsg/non_listed_company/establishment/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/nsg/non_listed_company/signatory_rights/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/person/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/person/basic_information/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/person/job_applicant_profile/: mod.rs
src/lib/api_app/src/api/routes/testbed/productizers/user/: mod.rs
src/lib/api_app/src/api/routes/users_api/: mod.rs
src/lib/api_app/src/lib/app/: Cargo.toml
src/lib/api_app/src/lib/app/src/: helpers.rs  lib.rs  requests.rs  responses.rs  router.rs
src/lib/api_app/src/lib/openapi_router/: Cargo.toml
src/lib/api_app/src/lib/openapi_router/src/: lib.rs  requests.rs  responses.rs  router.rs
src/lib/api_app/src/lib/openapi_router_derive/: Cargo.toml
src/lib/api_app/src/lib/openapi_router_derive/src/: lib.rs
src/lib/api_app/src/lib/utils/: Cargo.toml
src/lib/api_app/src/lib/utils/src/: api.rs  lib.rs  strings.rs
src/lib/api_app/src/tests/: mod.rs
src/lib/api_app/src/tests/api_router_test/: mocks.rs  mod.rs
src/lib/api_app/src/tests/api_utils_test/: mod.rs
src/lib/api_app/src/tests/api_utils_test/mock_data/: job_postings_response.json
src/lib/http_server/: Cargo.toml
src/lib/http_server/src/: http_server.rs
src/lib/lambda_service/: Cargo.toml
src/lib/lambda_service/src/: lambda_service.rs
src/routes/: application.rs  figure.rs  job.rs  mod.rs  population.rs
src/tests/: mod.rs
