[package]
name = "api_app"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
log = "0.4.14"
http = "0.2.5"
reqwest = { version = "0.11.12", features = ["json"] }
simple_logger = "4.0.0"
lambda_http = "0.7.0"