[package]
name = "api_app"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
simple_logger = { workspace = true }
lambda_http = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
libmath = { workspace = true }
stopwatch = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true }
lazy_static = "1.4.0"
memory-cache-rs = "0.2.0"
mockito = "1.0.0"

app = { path = "./src/lib/app" }
utils = { path = "./src/lib/utils" }
