[package]
name = "app"
version = "1.0.0"
edition = "2021"

[dependencies]
openapi_router_derive = { path = "../openapi_router_derive" }
utils = { path = "../utils" }

serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
simple_logger = { workspace = true }
lambda_http = { workspace = true }
futures = { workspace = true }
stopwatch = { workspace = true }
utoipa = { workspace = true }